# Zerograft

./: .gitattributes  .gitignore  .gitmodules  DEMO.md  LICENSE  README.md  install.sh  setup.sh
Spritemancerai/backend/: .env.example  main.py  pyproject.toml  requirements.txt  test_pipeline.py
Spritemancerai/backend/app/: __init__.py  config.py
Spritemancerai/backend/app/db/: __init__.py  redis_client.py  supabase_client.py
Spritemancerai/backend/app/models/: __init__.py  animation_script.py  asset_dna.py  character_dna.py  dual_character_dna.py  effect_types.py  pipeline_state.py  project.py  tileset_dna.py
Spritemancerai/backend/app/prompts/: README.md  __init__.py  stage_1_dna.txt  stage_1b_dual_dna.txt  stage_2b_responder_action.txt  stage_3_budget.txt  stage_4_intent.txt  stage_5_script.txt  stage_5b_responder_script.txt  stage_6_image.txt  system_instruction.json  system_stage_1_dna.json  system_stage_1b_dual_dna.json  system_stage_3a_action.json  system_stage_4_intent.json  system_stage_5_script.json  system_stage_5b_responder.json  system_stage_6_image.json
Spritemancerai/backend/app/routers/: __init__.py  ai_generator.py  export.py  pipeline_old.py  projects.py  tileset_generator.py  vfx.py  websocket.py
Spritemancerai/backend/app/routers/pipeline/: __init__.py  dual.py  helpers.py  lighting.py  repair.py  single.py  (+2 more)
Spritemancerai/backend/app/services/: __init__.py  asset_presets.py  difference_matting.py  dual_pipeline_orchestrator.py  gemini_client.py  pipeline_orchestrator.py  seamless_validation.py
Spritemancerai/backend/tests/: test_smoke.py
(+380 files in other folders)
